@@ -1,3 +1,10 @@
+2002-11-09  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/filetree.cc (collatekey_sort_func): Use std::strcmp() instead
+	of std::string::compare(), because libstdc++-v2 (which comes with
+	GCC 2.95.x) is badly broken and doesn't support this particular
+	overload of compare().  Darn.
+
 regexxer 0.2:
 
 2002-11-08  Daniel Elstner  <daniel.elstner@gmx.net>
